Fix Header Line Spacing for Mobile

--- a/SCSS/ITS Theme/Custom CSS/_CCSS-SlRvb - Headings.scss
+++ b/SCSS/ITS Theme/Custom CSS/_CCSS-SlRvb - Headings.scss
@@ -99,6 +99,7 @@ h4, .HyperMD-header-4 {
         display: block;
         background: var(--table);
         height: 4px;
+        margin-top: -10px;
     }
 }
 
